gpu: Update swizzles when texture base level changes

When we emulate GL_LUMINANCE_ALPHA using GL_RG and swizzles, we need to
make sure to update the swizzles whenever the base level of the texture
changes, because different levels can have different formats that need
different swizzles.

Fixes WebGL test
conformance2/textures/misc/copy-texture-image-same-texture.html

Bug: 809233
Change-Id: Iccda944688982ca1d67203b885cd3ea5236c7e26
Reviewed-on: https://chromium-review.googlesource.com/c/1356330
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: James Darpinian <jdarpinian@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612908}
Former-commit-id: d645c7b4c71d02f1393e6e70e9402d00b7d1b4b2